[gd_scene load_steps=5 format=3 uid="uid://ciksd20q8f3fh"]

[ext_resource type="Script" path="res://scenes/UI/SettingsMenu.gd" id="2"]
[ext_resource type="Theme" uid="uid://biyfm0rxrcuru" path="res://assets/theme/MinimalUI/MinimalUI.tres" id="3"]
[ext_resource type="PackedScene" path="res://scenes/audio/ClickPlayer.tscn" id="4"]
[ext_resource type="PackedScene" path="res://scenes/UI/ControlsSettings.tscn" id="5"]

[node name="SettingsMenu" type="Popup"]
visible = true
script = ExtResource("2")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0, 0, 0, 0.592157)

[node name="SettingsTabs" type="TabContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource("3")

[node name="Video" type="TabBar" parent="SettingsTabs"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="SettingsTabs/Video"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VideoSettings" type="GridContainer" parent="SettingsTabs/Video/MarginContainer"]
layout_mode = 2
columns = 2

[node name="DisplayLabel" type="Label" parent="SettingsTabs/Video/MarginContainer/VideoSettings"]
layout_mode = 2
text = "Display Mode"

[node name="DisplayOptionBtn" type="OptionButton" parent="SettingsTabs/Video/MarginContainer/VideoSettings"]
layout_mode = 2
size_flags_horizontal = 10
tooltip_text = "Use fullscreen for best experience."

[node name="VsyncLabel" type="Label" parent="SettingsTabs/Video/MarginContainer/VideoSettings"]
layout_mode = 2
text = "Vsync"

[node name="VsyncCheckBtn" type="CheckButton" parent="SettingsTabs/Video/MarginContainer/VideoSettings"]
layout_mode = 2
size_flags_horizontal = 10
tooltip_text = "May impact performance. Only enable if you are experiencing screen tearing."

[node name="ShowFpsLabel" type="Label" parent="SettingsTabs/Video/MarginContainer/VideoSettings"]
layout_mode = 2
text = "Display FPS"

[node name="ShowFpsCheckBtn" type="CheckButton" parent="SettingsTabs/Video/MarginContainer/VideoSettings"]
layout_mode = 2
size_flags_horizontal = 10
tooltip_text = "Displays Frames Per Second in top right while in game."

[node name="MaxFpsLabel" type="Label" parent="SettingsTabs/Video/MarginContainer/VideoSettings"]
layout_mode = 2
text = "Max fps"

[node name="HBoxContainer" type="HBoxContainer" parent="SettingsTabs/Video/MarginContainer/VideoSettings"]
layout_mode = 2
size_flags_horizontal = 10

[node name="MaxFpsValue" type="Label" parent="SettingsTabs/Video/MarginContainer/VideoSettings/HBoxContainer"]
layout_mode = 2
text = "60  "

[node name="MaxFpsSlider" type="HSlider" parent="SettingsTabs/Video/MarginContainer/VideoSettings/HBoxContainer"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 1
tooltip_text = "Caps out the Frames Per Second."
min_value = 30.0
max_value = 120.0
step = 15.0
value = 60.0

[node name="BloomLabel" type="Label" parent="SettingsTabs/Video/MarginContainer/VideoSettings"]
layout_mode = 2
text = "Bloom"

[node name="BloomCheckBtn" type="CheckButton" parent="SettingsTabs/Video/MarginContainer/VideoSettings"]
layout_mode = 2
size_flags_horizontal = 10
tooltip_text = "Bloom will slightly increase lighting quality and saturation."

[node name="BrightnessLabel" type="Label" parent="SettingsTabs/Video/MarginContainer/VideoSettings"]
layout_mode = 2
text = "Brightness"

[node name="BrightnessSlider" type="HSlider" parent="SettingsTabs/Video/MarginContainer/VideoSettings"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 1
tooltip_text = "Adjusts overall brightness of the game."
max_value = 8.0
value = 3.0

[node name="Audio" type="TabBar" parent="SettingsTabs"]
visible = false
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="SettingsTabs/Audio"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0

[node name="AudioSettings" type="GridContainer" parent="SettingsTabs/Audio/MarginContainer"]
layout_mode = 2
columns = 2

[node name="MasterVolLabel" type="Label" parent="SettingsTabs/Audio/MarginContainer/AudioSettings"]
layout_mode = 2
text = "Master Volume"

[node name="MasterVolSlider" type="HSlider" parent="SettingsTabs/Audio/MarginContainer/AudioSettings"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 1
tooltip_text = "Master volume control, effects Music and Sfx volume."
max_value = 55.0
value = 25.0

[node name="MusicVolLabel" type="Label" parent="SettingsTabs/Audio/MarginContainer/AudioSettings"]
layout_mode = 2
text = "Music Volume"

[node name="MusicVolSlider" type="HSlider" parent="SettingsTabs/Audio/MarginContainer/AudioSettings"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 1
tooltip_text = "Adjusts the volume of the music in the game."
max_value = 75.0
value = 50.0

[node name="SfxVolLabel" type="Label" parent="SettingsTabs/Audio/MarginContainer/AudioSettings"]
layout_mode = 2
text = "Sfx Volume"

[node name="SfxVolSlider" type="HSlider" parent="SettingsTabs/Audio/MarginContainer/AudioSettings"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 1
tooltip_text = "Adjusts the volume of the Sfx in the game such as: jumpscares, footsteps, etc."
max_value = 60.0
value = 50.0

[node name="WarningLabel" type="Label" parent="SettingsTabs/Audio"]
layout_mode = 0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -32.0
text = "BE VERY CAREFUL ADJUSTING AUDIO, JUMPSCARES CAN GET LOUD"

[node name="Controls" type="TabBar" parent="SettingsTabs"]
visible = false
layout_mode = 2

[node name="Controls" parent="SettingsTabs/Controls" instance=ExtResource("5")]
layout_mode = 0

[node name="Graphics" type="TabBar" parent="SettingsTabs"]
visible = false
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="SettingsTabs/Graphics"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0

[node name="GameplaySettings" type="VBoxContainer" parent="SettingsTabs/Graphics/MarginContainer"]
layout_mode = 2

[node name="FXAA" type="GridContainer" parent="SettingsTabs/Graphics/MarginContainer/GameplaySettings"]
layout_mode = 2
columns = 2

[node name="Label" type="Label" parent="SettingsTabs/Graphics/MarginContainer/GameplaySettings/FXAA"]
layout_mode = 2
text = "FXAA"

[node name="FXAACheck" type="CheckButton" parent="SettingsTabs/Graphics/MarginContainer/GameplaySettings/FXAA"]
layout_mode = 2
size_flags_horizontal = 10
tooltip_text = "Fast approximate antialiasing. Less performance impacting version of MSAA. Blurs corners to give the appearance of higher quality."

[node name="MSAA" type="GridContainer" parent="SettingsTabs/Graphics/MarginContainer/GameplaySettings"]
layout_mode = 2
columns = 2

[node name="Label" type="Label" parent="SettingsTabs/Graphics/MarginContainer/GameplaySettings/MSAA"]
layout_mode = 2
text = "MSAA"

[node name="MSAAOptions" type="OptionButton" parent="SettingsTabs/Graphics/MarginContainer/GameplaySettings/MSAA"]
custom_minimum_size = Vector2(130, 0)
layout_mode = 2
size_flags_horizontal = 10
tooltip_text = "Multi-sampling antialiasing. Provides higher quality sharpness to corners and edges at the cost of more performance."

[node name="VBoxContainer" type="VBoxContainer" parent="SettingsTabs/Graphics/MarginContainer/GameplaySettings"]
layout_mode = 2

[node name="ResolutionText" type="Label" parent="SettingsTabs/Graphics/MarginContainer/GameplaySettings/VBoxContainer"]
layout_mode = 2
text = "Resolution Scale"

[node name="HBoxContainer" type="HBoxContainer" parent="SettingsTabs/Graphics/MarginContainer/GameplaySettings/VBoxContainer"]
layout_mode = 2

[node name="ScaleText" type="Label" parent="SettingsTabs/Graphics/MarginContainer/GameplaySettings/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
text = "720p"

[node name="ResolutionScale" type="HSlider" parent="SettingsTabs/Graphics/MarginContainer/GameplaySettings/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "Adjusts the scale of the game to greatly improve performance. Will not affect any GUI's or HUD's."
max_value = 7.0
value = 6.0

[node name="QualityBloom" type="GridContainer" parent="SettingsTabs/Graphics/MarginContainer/GameplaySettings"]
layout_mode = 2
columns = 2

[node name="Label" type="Label" parent="SettingsTabs/Graphics/MarginContainer/GameplaySettings/QualityBloom"]
layout_mode = 2
text = "High Quality Lighting"

[node name="QualBloomCheck" type="CheckButton" parent="SettingsTabs/Graphics/MarginContainer/GameplaySettings/QualityBloom"]
layout_mode = 2
size_flags_horizontal = 10
tooltip_text = "Improved version of Bloom. Vastly improves lighting at medium cost to performance."

[node name="Gameplay" type="TabBar" parent="SettingsTabs"]
visible = false
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="SettingsTabs/Gameplay"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0

[node name="GameplaySettings" type="GridContainer" parent="SettingsTabs/Gameplay/MarginContainer"]
layout_mode = 2
columns = 2

[node name="FovLabel" type="Label" parent="SettingsTabs/Gameplay/MarginContainer/GameplaySettings"]
layout_mode = 2
text = "FOV"

[node name="HBoxContainer" type="HBoxContainer" parent="SettingsTabs/Gameplay/MarginContainer/GameplaySettings"]
layout_mode = 2
size_flags_horizontal = 10

[node name="FovVal" type="Label" parent="SettingsTabs/Gameplay/MarginContainer/GameplaySettings/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 12
text = "70"

[node name="FovSlider" type="HSlider" parent="SettingsTabs/Gameplay/MarginContainer/GameplaySettings/HBoxContainer"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 1
tooltip_text = "Field of View is the extent of the world visible to you at one time."
min_value = 70.0
value = 70.0

[node name="MouseSensitivityLabel" type="Label" parent="SettingsTabs/Gameplay/MarginContainer/GameplaySettings"]
layout_mode = 2
text = "Sensitivity"

[node name="HBoxContainer2" type="HBoxContainer" parent="SettingsTabs/Gameplay/MarginContainer/GameplaySettings"]
layout_mode = 2

[node name="MouseSensitivityVal" type="Label" parent="SettingsTabs/Gameplay/MarginContainer/GameplaySettings/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 10
text = "0.18"

[node name="MouseSensitivitySlider" type="HSlider" parent="SettingsTabs/Gameplay/MarginContainer/GameplaySettings/HBoxContainer2"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 1
tooltip_text = "Adjusts sensitivity of your mouse when looking around in game."
min_value = 5.0
max_value = 50.0
value = 18.0

[node name="ClearSaveLabel" type="Label" parent="SettingsTabs/Gameplay/MarginContainer/GameplaySettings"]
layout_mode = 2
text = "Clear Save"

[node name="ClearSaveBtn" type="CheckButton" parent="SettingsTabs/Gameplay/MarginContainer/GameplaySettings"]
layout_mode = 2
size_flags_horizontal = 10
tooltip_text = "Clears your save data not including Settings and Achievements."

[node name="DefaultLabel" type="Label" parent="SettingsTabs/Gameplay/MarginContainer/GameplaySettings"]
layout_mode = 2
text = "Default Settings"

[node name="DefaultBtn" type="CheckButton" parent="SettingsTabs/Gameplay/MarginContainer/GameplaySettings"]
layout_mode = 2
size_flags_horizontal = 10
tooltip_text = "Resets all settings to default."

[node name="ClickPlayer" parent="." instance=ExtResource("4")]
bus = &"SfxBus"

[node name="Close" type="Button" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -29.0
offset_bottom = 20.0
theme = ExtResource("3")
text = "X"

[connection signal="tab_changed" from="SettingsTabs" to="." method="_on_SettingsTabs_tab_changed"]
[connection signal="item_selected" from="SettingsTabs/Video/MarginContainer/VideoSettings/DisplayOptionBtn" to="." method="_on_DisplayOptionBtn_item_selected"]
[connection signal="pressed" from="SettingsTabs/Video/MarginContainer/VideoSettings/VsyncCheckBtn" to="." method="_on_VsyncCheckBtn_pressed"]
[connection signal="pressed" from="SettingsTabs/Video/MarginContainer/VideoSettings/ShowFpsCheckBtn" to="." method="_on_ShowFpsCheckBtn_pressed"]
[connection signal="value_changed" from="SettingsTabs/Video/MarginContainer/VideoSettings/HBoxContainer/MaxFpsSlider" to="." method="_on_MaxFpsSlider_value_changed"]
[connection signal="pressed" from="SettingsTabs/Video/MarginContainer/VideoSettings/BloomCheckBtn" to="." method="_on_BloomCheckBtn_pressed"]
[connection signal="value_changed" from="SettingsTabs/Video/MarginContainer/VideoSettings/BrightnessSlider" to="." method="_on_BrightnessSlider_value_changed"]
[connection signal="value_changed" from="SettingsTabs/Audio/MarginContainer/AudioSettings/MasterVolSlider" to="." method="_on_MasterVolSlider_value_changed"]
[connection signal="value_changed" from="SettingsTabs/Audio/MarginContainer/AudioSettings/MusicVolSlider" to="." method="_on_MusicVolSlider_value_changed"]
[connection signal="value_changed" from="SettingsTabs/Audio/MarginContainer/AudioSettings/SfxVolSlider" to="." method="_on_SfxVolSlider_value_changed"]
[connection signal="pressed" from="SettingsTabs/Graphics/MarginContainer/GameplaySettings/FXAA/FXAACheck" to="." method="_on_FXAACheck_pressed"]
[connection signal="item_selected" from="SettingsTabs/Graphics/MarginContainer/GameplaySettings/MSAA/MSAAOptions" to="." method="_on_MSAAOptions_item_selected"]
[connection signal="value_changed" from="SettingsTabs/Graphics/MarginContainer/GameplaySettings/VBoxContainer/HBoxContainer/ResolutionScale" to="." method="_on_ResolutionScale_value_changed"]
[connection signal="pressed" from="SettingsTabs/Graphics/MarginContainer/GameplaySettings/QualityBloom/QualBloomCheck" to="." method="_on_QualBloomCheck_pressed"]
[connection signal="value_changed" from="SettingsTabs/Gameplay/MarginContainer/GameplaySettings/HBoxContainer/FovSlider" to="." method="_on_FovSlider_value_changed"]
[connection signal="value_changed" from="SettingsTabs/Gameplay/MarginContainer/GameplaySettings/HBoxContainer2/MouseSensitivitySlider" to="." method="_on_MouseSensitivitySlider_value_changed"]
[connection signal="pressed" from="SettingsTabs/Gameplay/MarginContainer/GameplaySettings/ClearSaveBtn" to="." method="_on_ClearSaveBtn_pressed"]
[connection signal="pressed" from="SettingsTabs/Gameplay/MarginContainer/GameplaySettings/DefaultBtn" to="." method="_on_DefaultBtn_pressed"]
[connection signal="pressed" from="Close" to="." method="_on_Close_pressed"]
